--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 <body>
 
 
-	<a class="gotopbtn bg-dark" href="#page1"> <i class="fas fa-arrow-up" style="color: white;"></i></a>
+	<a id="iconup" class="gotopbtn bg-dark" href="#page1"> <i class="fas fa-arrow-up" style="color: white;"></i></a>
 
 	<div id="page1" class="container-fluid text-center">
 		<div class="row">
 			<div class="col-1 relative1">
 				<div class="absolute1">
-					<div class="butt animated rollIn"><a href="#page2"> <i class="fas fa-atom"> <br>Skills</i> </a></div>
-					<div class="butt animated rollIn"><a href="#page3"> <i class="fas fa-atom"> <br>Projects</i> </a></div>
-					<div class="butt animated rollIn"><a href="https://drive.google.com/uc?id=1YFDPkLwem8y2o3ooxBMw86KLcJwkPa-A&export=download" download="resume"> <i class="fas fa-atom"> <br>Resume</i> </a></div>
+					<div id="icon1" class="butt animated rollIn"><a href="#page2"> <i class="fas fa-atom"> <br>Skills</i> </a></div>
+					<div id="icon2" class="butt animated rollIn"><a href="#page3"> <i class="fas fa-atom"> <br>Projects</i> </a></div>
+					<div id="icon3" class="butt animated rollIn"><a href="https://drive.google.com/uc?id=1YFDPkLwem8y2o3ooxBMw86KLcJwkPa-A&export=download" download="resume"> <i class="fas fa-atom"> <br>Resume</i> </a></div>
 				</div>
 			</div>
 
@@ -111,7 +111,7 @@
 		
 		<div class="jumbotron" style="margin-bottom: 0;">
 			<div class="container">
-				<h1 class="text-center" style="font-size: 100px; font-family: 'Staatliches', cursive;">Projects</h1>
+				<h1 class="text-center" >Projects</h1>
 			</div>
 		</div>
 
@@ -136,40 +136,26 @@
 
 		<section class="module content">
 			<div class="parallax-container">
-				<h2>Booklings(Library Management System)</h2>
-				<a href="#" target="_blank" class="btn btn-dark">Go to..</a>
+				<h2>Bookling(Library Management System)</h2>
+				<a href="https://salty-thicket-78325.herokuapp.com/" target="_blank" class="btn btn-dark">Go to..</a>
 			</div>
 		</section>
 
 		<section class="module parallax parallax-3" data-type="background" data-speed="10">
 			<div class="parallax-container">
-				<h1>CAPSTONE 3</h1>
+				<h1>Tikling3</h1>
 			</div>
 		</section>
 
 		<section class="module content" style="margin-bottom: 0px;">
 			<div class="parallax-container">
-				<h2>Title(Booking System)</h2>
-				<a href="#" target="_blank" class="btn btn-dark">Go to..</a>
+				<h2>Tiklingle(Booking System)</h2>
+				<a href="https://salty-coast-83311.herokuapp.com/" target="_blank" class="btn btn-dark">Go to..</a>
 			</div>
 		</section>
 
 	</div>
 	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	
 </body>
 </html>
